internal/diag/testdata/golden/basic.txt
error[E0500]: undefined name `unknown`
 --> test.osty:2:13
    |
  2 |     let x = unknown
    |             ^^^^^^^ not in scope
    |
 = help: did you mean `unknownField`?
